# bookstore-project

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/backend/: main.py
frontend/: .dockerignore  Dockerfile  package.json
